make devies cachable

--- a/settings.toml
+++ b/settings.toml
@@ -3,3 +3,6 @@ RESERVATION_MAX_HOURS = 0.0083
 
 # VSYS Max by model
 PA1410_MAX_VSYS = 5 # default vsys plus 4
+
+# Max days a reservation is valid
+RESERVATION_MAX_DAYS = 14
