debugging batch res creation

--- a/settings.toml
+++ b/settings.toml
@@ -6,3 +6,6 @@ PA1410_MAX_VSYS = 5 # default vsys plus 4
 
 # Max days a reservation is valid
 RESERVATION_MAX_DAYS = 2
+
+# Prefix for vsys resrevation name
+RESERVATION_PREFIX = "RES-"
