build of device list filtered by list of device groups

--- a/settings.toml
+++ b/settings.toml
@@ -15,3 +15,6 @@ RESERVATION_PREFIX = "RES-"
 LOG_LEVEL = "INFO"
 LOG_FILE = "vsys_dashboard.log"
 LOG_DIR = "logs/"
+
+# Device Group List Scope
+DEVICE_GRPS = ["GTS-VSYS-ORD", "GTS-VSYS-DFW", "GTS-VSYS-IAD", "GTS-VSYS-FRA", "GTS-VSYS-HKG", "GTS-VSYS-LON", "GTS-VSYS-SIN", "GTS-VSYS-SJC", "GTS-VSYS-SYD"]
