--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
                 "PANORAMA": "204.232.167.99",
                 "CDWU": "cdw-sam",
                 "CDWP": "6uDj63JWuP2p",
+                "PYTHONPATH": "${workspaceFolder}",
             }
         }
     ]
