--- a/settings.toml
+++ b/settings.toml
@@ -11,6 +11,9 @@ RESERVATION_MAX_DAYS = 2
 # Prefix for vsys resrevation name
 RESERVATION_PREFIX = "RES-"
 
+# Oauth provider URL
+AUTHORITY_URL = "https://login.microsoftonline.com/"
+REDIRECT_URI = "localhost:8005"
 # Logging setup
 LOG_LEVEL = "INFO"
 LOG_FILE = "vsys_dashboard.log"
