More work on deploy keys build

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,4 +2,4 @@ Host github-vsys
     HostName github.com
     AddKeysToAgent yes
     PreferredAuthentications publickey
-    IdentityFile /app/.ssh/github.rsa.pub
+    IdentityFile /app/.ssh/github.rsa
