update to facts api call for paging

--- a/settings.toml
+++ b/settings.toml
@@ -26,4 +26,7 @@ DEVICE_GRPS = ["GTS-VSYS-ORD", "GTS-VSYS-DFW", "GTS-VSYS-IAD", "GTS-VSYS-FRA", "
 
 # Facts details
 FACTS_TOKEN_URL = "https://identity-internal.api.rackspacecloud.com/v2.0/tokens"
+FACTS_URL = "https://facts.nsi.rackspace.com/vsys_infra/vsys_infra"
+PER_PAGE = 50
+ 
 
